// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders animated fab 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 16,
          "opacity": 1,
          "position": "absolute",
          "transform": Array [
            Object {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "borderRadius": 16,
            "height": 56,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "elevation": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              Object {
                "borderRadius": 16,
                "bottom": 0,
                "elevation": 6,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 72,
              }
            }
          />
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              Object {
                "borderRadius": 16,
                "bottom": 0,
                "elevation": 6,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "translateX": 16,
                  },
                ],
                "width": 56,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "borderRadius": 16,
              "flexDirection": "row",
              "overflow": "hidden",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "rgba(234, 221, 255, 1)",
                "borderRadius": 16,
                "height": 56,
                "left": 16,
                "right": undefined,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
                "width": 72,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 16,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 56,
                    },
                    Object {
                      "borderRadius": 16,
                      "width": 72,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "alignItems": "center",
            "height": 56,
            "justifyContent": "center",
            "left": 16,
            "position": "absolute",
            "right": undefined,
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
            "width": 56,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        pointerEvents="none"
      >
        <Text
          collapsable={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          onTextLayout={[Function]}
          style={
            Object {
              "color": "rgba(33, 0, 93, 1)",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0.1,
              "lineHeight": 20,
              "minWidth": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 16,
              "textAlign": "left",
              "top": -28,
              "transform": Array [
                Object {
                  "translateX": 56,
                },
              ],
              "writingDirection": "ltr",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders animated fab with label on the left 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 16,
          "opacity": 1,
          "position": "absolute",
          "transform": Array [
            Object {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "borderRadius": 16,
            "height": 56,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "elevation": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              Object {
                "borderRadius": 16,
                "bottom": 0,
                "elevation": 6,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 72,
              }
            }
          />
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              Object {
                "borderRadius": 16,
                "bottom": 0,
                "elevation": 6,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
                "width": 56,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "borderRadius": 16,
              "flexDirection": "row",
              "overflow": "hidden",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "rgba(234, 221, 255, 1)",
                "borderRadius": 16,
                "height": 56,
                "left": -16,
                "right": undefined,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
                "width": 72,
              }
            }
          >
            <View
              accessibilityLabel="text"
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 16,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 56,
                    },
                    Object {
                      "borderRadius": 16,
                      "width": 72,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "alignItems": "center",
            "height": 56,
            "justifyContent": "center",
            "left": -16,
            "position": "absolute",
            "right": undefined,
            "transform": Array [
              Object {
                "translateX": 16,
              },
            ],
            "width": 56,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        pointerEvents="none"
      >
        <Text
          collapsable={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          onTextLayout={[Function]}
          style={
            Object {
              "color": "rgba(33, 0, 93, 1)",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "500",
              "left": 16,
              "letterSpacing": 0.1,
              "lineHeight": 20,
              "minWidth": 0,
              "opacity": 0,
              "position": "absolute",
              "textAlign": "left",
              "top": -28,
              "transform": Array [
                Object {
                  "translateX": 56,
                },
              ],
              "writingDirection": "ltr",
            }
          }
        >
          text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders animated fab with label on the right by default 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 16,
          "opacity": 1,
          "position": "absolute",
          "transform": Array [
            Object {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "borderRadius": 16,
            "height": 56,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "elevation": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              Object {
                "borderRadius": 16,
                "bottom": 0,
                "elevation": 6,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 72,
              }
            }
          />
          <View
            collapsable={false}
            pointerEvents="none"
            style={
              Object {
                "borderRadius": 16,
                "bottom": 0,
                "elevation": 6,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": Array [
                  Object {
                    "translateX": 16,
                  },
                ],
                "width": 56,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "borderRadius": 16,
              "flexDirection": "row",
              "overflow": "hidden",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "rgba(234, 221, 255, 1)",
                "borderRadius": 16,
                "height": 56,
                "left": 16,
                "right": undefined,
                "transform": Array [
                  Object {
                    "translateX": 0,
                  },
                ],
                "width": 72,
              }
            }
          >
            <View
              accessibilityLabel="text"
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 16,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 56,
                    },
                    Object {
                      "borderRadius": 16,
                      "width": 72,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "alignItems": "center",
            "height": 56,
            "justifyContent": "center",
            "left": 16,
            "position": "absolute",
            "right": undefined,
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
            "width": 56,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "color": "rgba(33, 0, 93, 1)",
                "fontSize": 24,
              },
            ]
          }
        >
          □
        </Text>
      </View>
      <View
        pointerEvents="none"
      >
        <Text
          collapsable={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          onTextLayout={[Function]}
          style={
            Object {
              "color": "rgba(33, 0, 93, 1)",
              "fontFamily": "System",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 0.1,
              "lineHeight": 20,
              "minWidth": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 16,
              "textAlign": "left",
              "top": -28,
              "transform": Array [
                Object {
                  "translateX": 56,
                },
              ],
              "writingDirection": "ltr",
            }
          }
        >
          text
        </Text>
      </View>
    </View>
  </View>
</View>
`;
